--- a/templates/drive/drive.html
+++ b/templates/drive/drive.html
@@ -1,4 +1,5 @@
 {%extends 'frame.html'%}
+{%load crispy_forms_tags%}
 {%block title%}Drive | bqtbsb{% endblock %}
 
 {% block drive_active %}active{% endblock %}
@@ -8,33 +9,89 @@
     .modal-backdrop {
         z-index: -1;
     }
+
+    .red {
+        filter: blur(8px);
+        -webkit-filter: blur(8px);
+    }
+
+    .red:hover {
+        filter: blur(3px);
+        -webkit-filter: blur(3px);
+    }
+
+    .yellow {
+        filter: blur(8px);
+        -webkit-filter: blur(8px);
+    }
+
+    .yellow:hover {
+        filter: blur(0px);
+        -webkit-filter: blur(0px);
+    }
 </style>
 {% endblock %}
 
 {% block header_misc %}
+
+<a href="#" class="nav-link mx-3" data-bs-toggle="modal" data-bs-target="#sort_popup">
+    <i class="bi bi-bar-chart-steps mr-2"></i> Sort By
+</a>
+<!-- Modal -->
+<div class="modal fade text-dark" id="sort_popup" tabindex="0" role="dialog" aria-labelledby="sort_popup"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-body">
+                <div class="conteiner-fluid">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <p class="lead">Filter By:</p>
+                            <div class="dropdown show border-bottom">
+                                <a class="dropdown-toggle text-decoration-none text-dark" href="#" role="button"
+                                    id="tag_drop" data-bs-toggle="dropdown" aria-haspopup="true"
+                                    aria-expanded="false">
+                                    Tags
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="tag_drop">
+                                    <a class="dropdown-item" href="#">Action</a>
+                                    <a class="dropdown-item" href="#">Another action</a>
+                                    <a class="dropdown-item" href="#">Something else here</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <p class="lead">Sort By:</p>
+                            <a class="dropdown-item border-bottom" href="#">Action</a>
+                            <a class="dropdown-item border-bottom" href="#">Another action</a>
+                            <a class="dropdown-item border-bottom" href="#">Something else here</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+
 <a href="#" class="nav-link mx-3" data-bs-toggle="modal" data-bs-target="#upload_popup">
     <i class="bi bi-cloud-arrow-up-fill mx-1"></i>Upload
 </a>
 <!-- Modal -->
-<div class="modal fade" id="upload_popup" tabindex="0" role="dialog" aria-labelledby="upload_popup" aria-hidden="true">
+<div class="modal fade text-dark" id="upload_popup" tabindex="0" role="dialog" aria-labelledby="upload_popup"
+    aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="model_header">Modal title</h5>
-                <span class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">
-                        <i class="bi bi-x-lg text-dark"></i>
-                    </span>
-                </span>
+                <h5 class="modal-title" id="model_header">Image Upload Form</h5>
             </div>
             <div class="modal-body">
-                <form action="{% url 'drive:upload_file' }" method="post" enctype="multipart/form-data">
+                <form action="" method="post" enctype="multipart/form-data">
                     {% csrf_token %}
-                    <div class="form-group">
-                        <label for="exampleInputEmail1">Choose your file</label>
-                        <input type="file" class="form-control" id="upload_file" name="upload_file"
-                            aria-describedby="upload_file" placeholder="Choose your file...">
-                    </div>
+                    <table>
+                        {{upload_form|crispy}}
+                    </table>
                     <div class="modal-footer">
                         <button type="submit" class="btn btn-dark">Upload</button>
                     </div>
@@ -50,9 +107,72 @@
 {% block body %}
 
 <div class="container-flex p-2">
-    <div class="container">
+    <div class="container-flex">
+        {% if images %}
+        <div class="row">
+            {% for image in images %}
+            <div class="col-md-3 my-3">
+                <div data-bs-toggle="modal" data-bs-target="#description_{{image.id}}"
+                    class="card border-3 {% if '2' in image.file_status %} border-success {% elif '1' in image.file_status %} border-warning {% else %} border-danger{%endif%}"
+                    style="width: 18rem;">
+                    <img class="card-img-top {% if '2' in image.file_status %}{% elif '1' in image.file_status %} yellow {% else %} red{%endif%}"
+                        src="{{image.file_path.url}}" height="150px">
+                </div>
+            </div>
 
+            <div class="modal fade text-dark" id="description_{{image.id}}" tabindex="0" role="dialog"
+                aria-labelledby="description_{{image.id}}" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="model_header">{{image.file_path}}</h5>
+                        </div>
+                        <div class="modal-body">
+                            <span class="lead">Upload Date: {{image.upload_date}}</span><br>
+                            <span class="lead">Image Shared: {{image.is_shared}}</span><br>
+                            <span class="lead">File Status:
+                                {% if '2' in image.file_status %}
+                                Unrestricted
+                                {% elif '1' in image.file_status %}
+                                Strict
+                                {% else %}
+                                Restricted
+                                {%endif%}
+                            </span><br>
+                            <div class="d-flex flex-row-reverse">
+                                <div class="p-2 mx-3">
+                                    <span onclick="delete_image('{{image.id}}')" class="btn btn-outline-danger">
+                                        <i class="bi bi-trash h4"></i>
+                                    </span>
+                                </div>
+                                <div class="p-2 mx-3">
+                                    <a href="{{image.file_path.url}}" download class="btn btn-outline-dark">
+                                        <i class="bi bi-cloud-download-fill h4"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <p class="my-2 ">
+                                <span class="">
+
+                                </span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+        {% endif %}
     </div>
 </div>
-
 {%endblock%}
+
+{% block misc_script %}
+<script>
+    delete_image = (id) => {
+        if (confirm("Deleted files can never be recovered. Do you wish to process?")) {
+            window.location.href = "{% url 'drive:delete_file' id=1234 %}".replace(/1234/, id.toString());
+        }
+    }
+</script>
+{% endblock %}
