--- a/templates/frame.html
+++ b/templates/frame.html
@@ -109,6 +109,7 @@
                 {%endif%}
 
                 <!-- Right links -->
+                {% if user.is_authenticated %}
                 <ul class="navbar-nav ms-auto d-flex flex-row">
 
                     {% block header_misc %}{% endblock %}
@@ -124,10 +125,11 @@
                             aria-labelledby="profile_dropdown">
                             <li><a class="dropdown-item" href="#">My profile</a></li>
                             <li><a class="dropdown-item" href="#">Settings</a></li>
-                            <li><a class="dropdown-item" href="#">Logout</a></li>
+                            <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
                         </ul>
                     </li>
                 </ul>
+                {% endif %}
             </div>
             <!-- Container wrapper -->
         </nav>
