--- a/templates/login.html
+++ b/templates/login.html
@@ -17,9 +17,9 @@
     <form class="text-center py-5" method="post">
         {% csrf_token %}
         <div class="form-group">
-            <label for="email">Email address</label>
-            <input type="email" name="email" class="form-control" id="email" aria-describedby="email"
-                placeholder="Enter email">
+            <label for="uname">uname address</label>
+            <input type="text" name="uname" class="form-control" id="uname" aria-describedby="uname"
+                placeholder="Username">
         </div><br>
         <div class="form-group">
             <label for="passwd">Password</label>
