typo error managed

--- a/templates/login.html
+++ b/templates/login.html
@@ -17,7 +17,7 @@
     <form class="text-center py-5" method="post">
         {% csrf_token %}
         <div class="form-group">
-            <label for="uname">uname address</label>
+            <label for="uname">Username</label>
             <input type="text" name="uname" class="form-control" id="uname" aria-describedby="uname"
                 placeholder="Username">
         </div><br>
