--- a/templates/drive/file_viewer.html
+++ b/templates/drive/file_viewer.html
@@ -58,6 +58,21 @@
                                     {% endfor %}
                                 </div>
                             </div>
+                            <div class="dropdown show border-bottom">
+                                <a class="dropdown-toggle text-decoration-none text-dark" href="#" role="button"
+                                    id="access_drop" data-bs-toggle="dropdown" aria-haspopup="true"
+                                    aria-expanded="false">
+                                    Access
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="access_drop">
+                                    <a class="dropdown-item border-bottom"
+                                        href="{% url 'drive:filter_file' key='restricted' %}">Restricted</a>
+                                    <a class="dropdown-item border-bottom"
+                                        href="{% url 'drive:filter_file' key='strict' %}">Strict</a>
+                                    <a class="dropdown-item border-bottom"
+                                        href="{% url 'drive:filter_file' key='unrestricted' %}">Unrestricted</a>
+                                </div>
+                            </div>
                         </div>
                         <div class="col-md-6">
                             <p class="lead">Sort By:</p>
