--- a/templates/my_profile.html
+++ b/templates/my_profile.html
@@ -18,31 +18,57 @@
         <div class="col-md-6">
             <p class="h3 border-bottom">
                 My Information
+                <span data-bs-toggle="modal" data-bs-target="#update_profile" class="text-end"><i
+                        class="bi bi-pen"></i></span>
             </p>
             <span class="lead">
-                Address:
+                Name: {{profile.user_name}}
             </span>
             <br>
             <span class="lead">
-                Phone:
+                Address: {{profile.user_address}}
             </span>
             <br>
             <span class="lead">
-                Email:
+                Phone: {{profile.user_phone}}
+            </span> 
+            <br>
+            <span class="lead">
+                Email: {{profile.user_email}}
             </span>
             <br>
             <span class="lead">
-                Last Modified:
-            </span>
-            <br>
-            <span class="lead">
-                Name:
+                Last Modified: {{profile.last_update}}
             </span>
         </div>
         <div class="col-md-6">
 
         </div>
     </div>
+
+    <div class="modal fade text-dark" id="update_profile" tabindex="0" role="dialog" aria-labelledby="add_tag_popup"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="model_header">Add tags for files</h5>
+                </div>
+                <div class="modal-body">
+                    <form action="" method="post">
+                        {% csrf_token %}
+                        <table>
+                            {{profile_update_form|crispy}}
+                        </table>
+                        <div class="modal-footer">
+                            <button type="submit" class="btn btn-dark">Update</button>
+                        </div>
+                    </form>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
 </div>
 
 
