--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,5 @@
 {%extends 'frame.html'%}
-{%block title%}Display | bqtbsb{% endblock %}
+{%block title%}Login | bqtbsb{% endblock %}
 {%load crispy_forms_tags%}
 
 {% block style_added %}
