note added in menu of base html

--- a/templates/frame.html
+++ b/templates/frame.html
@@ -77,6 +77,10 @@
                         class="list-group-item list-group-item-action {% block drive_active %}{% endblock %}">
                         <i class="bi bi-floppy2 mx-3"></i><span>Drive</span>
                     </a>
+                    <a href="{% url 'note:my_note' %}"
+                        class="list-group-item list-group-item-action {% block note_active %}{% endblock %}">
+                        <i class="bi bi-floppy2 mx-3"></i><span>Note</span>
+                    </a>
                 </div>
             </div>
         </nav>
