profile details typography changed

--- a/templates/my_profile.html
+++ b/templates/my_profile.html
@@ -22,23 +22,23 @@
                     <i class="text-secondary mx-5 bi bi-pencil"></i></span>
             </p>
             <span class="lead">
-                Name: {{profile.user_name}}
+                <strong>Name: </strong> {{profile.user_name}}
             </span>
             <br>
             <span class="lead">
-                Address: {{profile.user_address}}
+                <strong>Address: </strong> {{profile.user_address}}
             </span>
             <br>
             <span class="lead">
-                Phone: {{profile.user_phone}}
+                <strong>Phone: </strong> {{profile.user_phone}}
             </span>
             <br>
             <span class="lead">
-                Email: {{profile.user_email}}
+                <strong>Email: </strong> {{profile.user_email}}
             </span>
             <br>
             <span class="lead">
-                Last Modified: {{profile.last_update}}
+                <strong>Modified: </strong> {{profile.last_update}}
             </span>
         </div>
         <div class="col-md-6 py-3">
