frame updated for notes

--- a/templates/frame.html
+++ b/templates/frame.html
@@ -66,7 +66,7 @@
     <!--Main Navigation-->
     <header>
         <!-- Sidebar -->
-        <nav id="sidebarMenu" class="collapse d-lg-block sidebar collapse bg-white lead">
+        <nav id="sidebarMenu" class="collapse d-lg-block sidebar collapse bg-white lead" style="z-index: 999;">
             <div class="position-sticky">
                 <div class="list-group list-group-flush mx-3 mt-4">
                     <a href="{% url 'dashboard' %}"
